--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,22 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IntelliJ #
+############
+.idea/
+*.iml
+*.ipr
+*.iws
 
 # Package Files #
-*.jar
+#################
+*.class
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+# Gradle #
+##########
+.gradle/
+/build/
+bin/
+
+out/
+bin/
