--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-import com.sun.org.apache.xalan.internal.xsltc.cmdline.Compile
 
 group 'com.nexmo'
 version '0.0.1'
@@ -9,6 +8,16 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "com.nexmo.smtp.Client"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 dependencies {
